--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+*{
+    box-sizing: border-box;
+}
+
+html{
+    font-size: 16px;
+    /*background-image: linear-gradient(rgb(255, 57, 57),black);*/
+    
+}
+
+body{
+    margin: 0;
+    font-family: "Arial";
+    font-size: 18px;
+}
+
+a{
+    text-decoration: none;
+}
