--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -13,7 +13,7 @@
                     {{cartItem.course.name}}
                 </a>
             </div>
-           
+           <div></div>
             <div>
                 {{cartItem.price|currency}}
             </div>
