--- a/src/app/searchcomp/searchcomp.component.css
+++ b/src/app/searchcomp/searchcomp.component.css
@@ -2,6 +2,11 @@
 .container{
     height: 100%;
 }
+.container h3{
+    margin-top:2rem;
+    margin-left: 6rem;
+}
+
 
 .container{
     height: 100%;
