--- a/src/app/searchcomp/searchcomp.component.html
+++ b/src/app/searchcomp/searchcomp.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Searcherd:  </h3>
+    <h3>Search results: </h3>
     <app-not-found [visible]="!courses || courses.length<=0" resetLinkText="Go To HomePage"></app-not-found>
     
     <ul *ngIf="courses">    
